--- a/docs/nopublish/slides/xaringan-themer.css
+++ b/docs/nopublish/slides/xaringan-themer.css
@@ -65,10 +65,9 @@
   --lightblue: #56B4E9;
   --darkorange: #D55E00;
   --lightorange: #E69f00;
-  --yellow: #F0E442;
+  --yellow: #f0e442;
   --green: #009E73;
   --pink: #CC79A7;
-  --gray: 999999;
   --white: #FFFFFF;
 }
 
@@ -316,12 +315,6 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 }
 .bg-pink {
   background-color: var(--pink);
-}
-.gray {
-  color: var(--gray);
-}
-.bg-gray {
-  background-color: var(--gray);
 }
 .white {
   color: var(--white);
