--- a/docs/slides/xaringan-themer.css
+++ b/docs/slides/xaringan-themer.css
@@ -68,8 +68,10 @@
   --yellow: #f0e442;
   --green: #009E73;
   --pink: #CC79A7;
+  --gray: 999999;
   --white: #FFFFFF;
   --red: #ff0000;
+  --black: #000000;
 }
 
 html {
@@ -317,6 +319,12 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 .bg-pink {
   background-color: var(--pink);
 }
+.gray {
+  color: var(--gray);
+}
+.bg-gray {
+  background-color: var(--gray);
+}
 .white {
   color: var(--white);
 }
@@ -328,5 +336,11 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 }
 .bg-red {
   background-color: var(--red);
+}
+.black {
+  color: var(--black);
+}
+.bg-black {
+  background-color: var(--black);
 }
 
