--- a/docs/nopublish/slides/xaringan-themer.css
+++ b/docs/nopublish/slides/xaringan-themer.css
@@ -65,7 +65,7 @@
   --lightblue: #56B4E9;
   --darkorange: #D55E00;
   --lightorange: #E69f00;
-  --yellow: #F0E442;
+  --yellow: #f0e442;
   --green: #009E73;
   --pink: #CC79A7;
   --gray: 999999;
